[1.10]
 - Added html caching
 - Redesigned settings/translation pages
 - Restructured background script

[1.9]
 - Import/Export configuration
 - Onboarding with setup
 - Pin bookmarks to top
 - Improved middle click behaviour
 - Replaced gruntjs with npm scripts
 - Code optimization

[1.8]
 - Added many translations
 - Extended Drag&Drop (drop links into the sidebar)
 - Touchscreen support
 - Added separators
 - Added dark theme
 - Added Google Analytics

[1.7]
 - Added sort functionality
 - Added translation contribution
 - Replaced default translation mechanism
 - Possibility to add bookmarks/directories
 - Added keyboard shortcuts (esc to close, home to scroll to top)
 - Configurable typeface

[1.6]
 - Made entries hidable from sidebar
 - Changed contextmenus
 - Check urls of specific directories
 - Added directory accordion open behaviour

[1.5]
 - Completely new settings page
 - Added customization options
 - Info page for new features
 - Help page after installation

[1.4]
 - Search function
 - Added mouseover openAction configuration
 - Toggle function for icon in chrome menu
 - Added possibility to add keyboard shortcuts

[1.3]
 - Optional userdata sharing
 - Extended Options-Page (Tabs for 'Configuration', 'Feedback' and 'Help Improving')
 - Optimized favicon loading mechanism
 - Restructured for gruntjs

[1.2]
 - Middle click action configuration
 - Removed jQuery dependency
 - Code optimization
 - Minified js-files

[1.1]
 - Configuration extended
 - Added drag&drop functionality for changing bookmark positions
 - Optimized scroll behaviour of trackpads
 - Optimized settings page for hdpi screens

[1.0]
 - Sidebar with all bookmarks
 - Edit/Remove bookmarks and directories
 - Infos about bookmarks and directories
 - Check the bookmarks for changed or broken urls
 - Optional visual (icon on semitransparent background)
 - Fully configurable