@@ -283,16 +283,18 @@
             <div data-name="icon">
                 <div class="boxWrapper">
                     <div class="box">
-                        @toDo
+                        <div class="formElement" data-type="radio" data-name="iconShape" data-i18n="settings_icon_shape">
+                            <span data-value="bookmark"><span class="icon-bookmark"></span></span>
+                            <span data-value="star"><span class="icon-star"></span></span>
+                            <span data-value="bookmark-filled"><span class="icon-bookmark-filled"></span></span>
+                            <span data-value="star-filled"><span class="icon-star-filled"></span></span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="formElement" data-type="color" data-suggestions='["rgb(200,200,200)","rgb(85,85,85)"]' data-name="iconColor" data-i18n="settings_icon_color"></div>
                     </div>
                 </div>
             </div>
-
-            <menu class="backgroundChanger">
-                <a href="#" data-bg="1"></a>
-                <a href="#" data-bg="2"></a>
-                <a href="#" data-bg="3"></a>
-            </menu>
         </div>
 
         <!--
