@@ -3,25 +3,31 @@
 
     window.IconHelper = function (b) {
 
+        let cachedSvg = {};
+        let currentIcon = null;
+
         this.init = () => {
             return new Promise((resolve) => {
                 chrome.storage.sync.get(["appearance"], (obj) => {
-                    let shape = "bookmark";
+                    let name = "bookmark";
                     let color = "rgb(85,85,85)";
 
-                    if (obj && obj.appearance) {
+                    if (obj && obj.appearance && obj.appearance.styles) {
 
-                        if (obj.appearance.iconShape) {
-                            shape = obj.appearance.iconShape;
+                        if (obj.appearance.styles.iconShape) {
+                            name = obj.appearance.styles.iconShape;
                         }
 
-                        if (obj.appearance.iconColor) {
-                            color = obj.appearance.iconColor;
+                        if (obj.appearance.styles.iconColor) {
+                            color = obj.appearance.styles.iconColor;
                         }
                     }
 
-                    if (shape !== "logo") {
-                        this.set(shape, color);
+                    if (name !== "logo") {
+                        this.set({
+                            name: name,
+                            color: color
+                        });
                     }
                     resolve();
                 });
@@ -29,30 +35,55 @@
         };
 
 
-        this.set = (name, color) => {
+        /**
+         * Sets the extension icon to the given shape with the given color
+         *
+         * @param {object} opts
+         * @returns {Promise}
+         */
+        this.set = (opts) => {
+            console.log(opts, cachedSvg[opts.name]);
             return new Promise((resolve) => {
-                let canvas = document.createElement("canvas");
-                let size = 128;
-                canvas.width = size;
-                canvas.height = size;
-                let ctx = canvas.getContext('2d');
+                let onlyCurrentTab = opts.onlyCurrentTab || false;
 
-                $.xhr(chrome.extension.getURL("img/icon/menu/icon-" + name + ".svg")).then((obj) => {
-                    let svg = obj.responseText;
-                    svg = svg.replace(/\#000/, color);
+                if (currentIcon && !onlyCurrentTab && currentIcon === opts.name + "_" + opts.color) { // icon is the same -> do nothing
+                    resolve();
+                } else { // icon is different
+                    let canvas = document.createElement("canvas");
+                    let size = 128;
+                    canvas.width = size;
+                    canvas.height = size;
+                    let ctx = canvas.getContext('2d');
 
-                    let img = new Image();
-                    img.onload = () => {
-                        ctx.drawImage(img, 0, 0, size, size);
+                    new Promise((rslv) => {
+                        if (cachedSvg[opts.name]) {
+                            rslv(cachedSvg[opts.name]);
+                        } else {
+                            $.xhr(chrome.extension.getURL("img/icon/menu/icon-" + opts.name + ".svg")).then((obj) => {
+                                let svg = obj.responseText;
+                                cachedSvg[opts.name] = "data:image/svg+xml;charset=utf-8," + svg;
+                                rslv(cachedSvg[opts.name]);
+                            });
+                        }
+                    }).then((svg) => {
+                        svg = svg.replace(/\#000/g, opts.color);
+                        let img = new Image();
+                        img.onload = () => {
+                            ctx.drawImage(img, 0, 0, size, size);
 
-                        chrome.browserAction.setIcon({
-                            imageData: ctx.getImageData(0, 0, size, size)
-                        });
+                            chrome.browserAction.setIcon({
+                                imageData: ctx.getImageData(0, 0, size, size),
+                                tabId: onlyCurrentTab && opts.tabInfo ? opts.tabInfo.id : null
+                            });
 
-                        resolve();
-                    };
-                    img.src = "data:image/svg+xml;charset=utf-8," + svg;
-                });
+                            if (!onlyCurrentTab) {
+                                currentIcon = opts.name + "_" + opts.color;
+                            }
+                            resolve();
+                        };
+                        img.src = svg;
+                    });
+                }
             });
         };
 
