@@ -1,6 +1,7 @@
 [1.10]
  - Added html caching
  - Redesigned settings/translation pages
+ - Configurable extension icon
  - Restructured background script
 
 [1.9]
